# perfectly_hamiltonian

./: .gitmodules  5reg_planar_has_7_edge_cut.c  5reg_planar_no_cyclic_6_edge_cut.c  5reg_planar_perfectly_hamiltonian.c  CMakeLists.txt  README.md  reg_planar_all_colourings.c  reg_planar_count_colourings.c  reg_planar_perfectly_hamiltonian.c  reg_planar_vizing_class.c
